<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class CashCategory extends Model
{
    protected $fillable = ['name', 'type', 'is_active'];
    protected $casts = ['is_active' => 'boolean'];
    protected $table = 'cash_categories';
}
