<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class SparepartCategory extends Model
{
    protected $fillable = ['name', 'description'];
}
