erDiagram
    CUSTOMER ||--o{ VEHICLE : memiliki
    CUSTOMER ||--o{ SERVICE_ORDER : membuat
    VEHICLE |o--o{ SERVICE_ORDER : diservis
    SERVICE_ORDER ||--o{ SERVICE_ORDER_DETAIL : berisi
    SERVICE_ORDER }o--|| MECHANIC : dikerjakan_oleh
    SERVICE_ORDER ||--|| INVOICE : menghasilkan
    SERVICE_TYPE ||--o{ SERVICE_ORDER_DETAIL : dipakai_di
    SPAREPART ||--o{ SERVICE_ORDER_DETAIL : dipakai_di
    SPAREPART ||--o{ STOCK_MOVEMENT : tercatat_di
    SERVICE_ORDER ||--o{ STOCK_MOVEMENT : memicu
    USER ||--o{ SERVICE_ORDER : mengelola
    SUPPLIER ||--o{ PURCHASE_ORDER : menerima_pesanan
    PURCHASE_ORDER ||--o{ PURCHASE_ORDER_DETAIL : berisi
    PURCHASE_ORDER_DETAIL }o--|| SPAREPART : memesan
    PURCHASE_ORDER ||--o{ STOCK_MOVEMENT : memicu
    USER ||--o{ PURCHASE_ORDER : membuat
    SPAREPART_CATEGORY ||--o{ SPAREPART : mengelompokkan
    UNIT ||--o{ SPAREPART : menyatukan_satuan
    SERVICE_CATEGORY ||--o{ SERVICE_TYPE : mengelompokkan
    PAYMENT_METHOD ||--o{ PAYMENT_TRANSACTION : dipakai_di
    SALES_ORDER ||--o{ PAYMENT_TRANSACTION : dibayar_melalui
    INVOICE ||--o{ PAYMENT_TRANSACTION : dibayar_melalui
    USER ||--o{ PAYMENT_TRANSACTION : mencatat
    SERVICE_ORDER ||--o{ SERVICE_ORDER_CHECKLIST : memiliki
    CHECKLIST_ITEM ||--o{ SERVICE_ORDER_CHECKLIST : dipakai_di
    MECHANIC ||--o{ SERVICE_ORDER_CHECKLIST : memeriksa
    SERVICE_ORDER ||--o{ SERVICE_ORDER_PHOTO : memiliki
    USER ||--o{ SERVICE_ORDER_PHOTO : mengunggah
    SERVICE_ORDER ||--o{ PART_REQUEST : memicu
    MECHANIC ||--o{ PART_REQUEST : meminta
    PART_REQUEST ||--o{ PART_REQUEST_DETAIL : berisi
    SPAREPART ||--o{ PART_REQUEST_DETAIL : diminta
    USER ||--o{ PART_REQUEST_DETAIL : memenuhi
    PART_REQUEST_DETAIL ||--o{ STOCK_MOVEMENT : memicu
    PART_REQUEST_DETAIL ||--o{ PART_RETURN : dikembalikan
    MECHANIC ||--o{ PART_RETURN : mengembalikan
    USER ||--o{ PART_RETURN : mengonfirmasi
    PART_RETURN ||--o{ STOCK_MOVEMENT : memicu
    SPAREPART ||--o{ STOCK_ADJUSTMENT : disesuaikan
    USER ||--o{ STOCK_ADJUSTMENT : melakukan
    STOCK_ADJUSTMENT ||--o{ STOCK_MOVEMENT : memicu
    USER ||--o{ STOCK_MOVEMENT : mencatat
    CUSTOMER ||--o{ SALES_ORDER : membeli
    USER ||--o{ SALES_ORDER : melayani
    SALES_ORDER ||--o{ SALES_ORDER_DETAIL : berisi
    SPAREPART ||--o{ SALES_ORDER_DETAIL : dijual
    SALES_ORDER_DETAIL ||--o{ STOCK_MOVEMENT : memicu
    SPAREPART ||--o{ STOCK_BATCH : memiliki_batch
    STOCK_MOVEMENT |o--o| STOCK_BATCH : membentuk
    STOCK_BATCH ||--o{ STOCK_MOVEMENT_ALLOCATION : dialokasikan_dari
    STOCK_MOVEMENT ||--o{ STOCK_MOVEMENT_ALLOCATION : mengalokasikan
    CASH_CATEGORY ||--o{ CASH_TRANSACTION : mengelompokkan
    USER ||--o{ CASH_TRANSACTION : mencatat

    CUSTOMER {
        int customer_id PK
        boolean is_walk_in
        string name "nullable jika walk-in"
        string phone "nullable jika walk-in"
        string email
        string address
        datetime created_at
    }

    VEHICLE {
        int vehicle_id PK
        int customer_id FK
        string plate_number
        string brand
        string model
        int year
        string chassis_number
        string engine_number
    }

    SERVICE_ORDER {
        int order_id PK
        int vehicle_id FK "nullable, kosong jika walk-in"
        int customer_id FK
        int mechanic_id FK
        string vehicle_plate_manual "diisi manual jika walk-in"
        string vehicle_info_manual "diisi manual jika walk-in, misal: Honda Beat hitam"
        string complaint
        string status
        datetime created_at
        datetime estimated_finish
        datetime actual_finish
    }

    SERVICE_ORDER_DETAIL {
        int detail_id PK
        int order_id FK
        string type
        int item_id FK
        int qty
        decimal price
    }

    SERVICE_TYPE {
        int service_type_id PK
        int service_category_id FK
        string name
        decimal base_price
        int estimated_duration
    }

    SPAREPART {
        int part_id PK
        string code
        string name
        int category_id FK
        int unit_id FK
        decimal buy_price
        decimal sell_price
        int min_stock
    }

    STOCK_MOVEMENT {
        int movement_id PK
        int part_id FK
        string movement_type "in atau out"
        string source_type "purchase_order, part_request, part_return, stock_adjustment, service_order_detail, sales_order_detail"
        int source_id "merujuk ke tabel sesuai source_type"
        int qty
        date transaction_date "tanggal transaksi sebenarnya"
        datetime created_at "waktu record dibuat di sistem"
        int created_by FK
    }

    MECHANIC {
        int mechanic_id PK
        string name
        string specialization
        string phone
        string status
    }

    INVOICE {
        int invoice_id PK
        int order_id FK
        decimal total_amount
        decimal discount
        string payment_status
        datetime created_at
    }

    USER {
        int user_id PK
        string username
        string password_hash
        string role
    }

    SUPPLIER {
        int supplier_id PK
        string name
        string phone
        string address
        string contact_person
    }

    PURCHASE_ORDER {
        int po_id PK
        int supplier_id FK
        int user_id FK
        string status
        datetime order_date
        datetime received_date
        decimal total_amount
    }

    PURCHASE_ORDER_DETAIL {
        int po_detail_id PK
        int po_id FK
        int part_id FK
        int qty
        decimal buy_price
    }

    SPAREPART_CATEGORY {
        int category_id PK
        string name
        string description
    }

    UNIT {
        int unit_id PK
        string name
        string symbol
    }

    SERVICE_CATEGORY {
        int service_category_id PK
        string name
        string description
    }

    PAYMENT_METHOD {
        int payment_method_id PK
        string name
        boolean is_active
    }

    CHECKLIST_ITEM {
        int checklist_item_id PK
        string name
        string description
        boolean is_active
    }

    SERVICE_ORDER_CHECKLIST {
        int order_checklist_id PK
        int order_id FK
        int checklist_item_id FK
        int mechanic_id FK
        boolean is_checked
        string notes
        datetime checked_at
    }

    SERVICE_ORDER_PHOTO {
        int photo_id PK
        int order_id FK
        int user_id FK
        string photo_url
        string type "before atau after"
        string caption
        datetime uploaded_at
    }

    PART_REQUEST {
        int part_request_id PK
        int order_id FK
        int mechanic_id FK
        string status "requested, partial, fulfilled"
        datetime requested_at
    }

    PART_REQUEST_DETAIL {
        int detail_id PK
        int part_request_id FK
        int part_id FK
        int qty_requested
        int qty_fulfilled
        int qty_returned
        string status "pending, partial, fulfilled"
        int fulfilled_by FK
        datetime fulfilled_at
    }

    PART_RETURN {
        int part_return_id PK
        int part_request_detail_id FK
        int mechanic_id FK
        int confirmed_by FK
        int qty_returned
        string reason "tidak_cocok atau tidak_dipakai"
        datetime returned_at
        datetime confirmed_at
    }

    STOCK_ADJUSTMENT {
        int adjustment_id PK
        int part_id FK
        int user_id FK
        int qty "bisa plus/minus"
        string reason "saldo_awal, koreksi_stock_opname, barang_rusak, dll"
        string notes
        date transaction_date
        datetime created_at
    }

    SALES_ORDER {
        int sales_order_id PK
        int customer_id FK "nullable, bisa walk-in"
        int user_id FK
        decimal total_amount
        decimal discount
        string payment_status
        datetime created_at
    }

    SALES_ORDER_DETAIL {
        int sales_detail_id PK
        int sales_order_id FK
        int part_id FK
        int qty
        decimal sell_price
        decimal cost_price "HPP dari FIFO, terisi setelah alokasi batch"
    }

    STOCK_BATCH {
        int batch_id PK
        int part_id FK
        int qty_in "jumlah masuk awal batch ini"
        int qty_remaining "sisa yang belum terpakai"
        decimal buy_price "harga beli batch ini"
        date received_date "dipakai untuk urutan FIFO"
        datetime created_at
    }

    STOCK_MOVEMENT_ALLOCATION {
        int allocation_id PK
        int movement_id FK "stock_movement tipe out"
        int batch_id FK "batch yang dipakai, FIFO"
        int qty_taken
        decimal cost_price "harga beli dari batch ini, untuk HPP"
    }

    PAYMENT_TRANSACTION {
        int payment_transaction_id PK
        string reference_type "sales_order atau invoice"
        int reference_id "merujuk ke SALES_ORDER atau INVOICE sesuai reference_type"
        int payment_method_id FK
        int created_by FK
        decimal amount "jumlah dibayar lewat metode ini"
        decimal amount_received "khusus tunai"
        decimal change_amount "khusus tunai"
        string card_type "debit/kredit, khusus kartu"
        string card_last4 "4 digit terakhir kartu, khusus kartu"
        string issuing_bank "bank penerbit kartu / bank tujuan transfer"
        string reference_number "kode approval EDC / no ref QRIS / no ref transfer"
        string proof_url "bukti transfer, opsional"
        datetime paid_at
    }

    CASH_CATEGORY {
        int cash_category_id PK
        string name
        string type "in atau out"
        boolean is_active
    }

    CASH_TRANSACTION {
        int cash_transaction_id PK
        int cash_category_id FK
        int user_id FK
        string type "in atau out"
        decimal amount
        string description
        string proof_url "opsional, foto kwitansi/bukti bayar"
        date transaction_date
        datetime created_at
    }
